@@ -4,6 +4,7 @@ Version 2.02.182 -
   Fix lvconvert raid0/raid0_meta -> striped regression.
   Fix lvconvert --splitmirror for mirror type (2.02.178).
   Do not pair cache policy and cache metadata format.
+  Reduce max concurrent aios to avoid EMFILE with many devices.
 
 Version 2.02.181 - 01 August 2018
 =================================
